# snekql

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  PRD.md  README.md  TODO.md  main.py  pyproject.toml  pyrightconfig.json
benchmarks/: README.md  __init__.py  _fixtures.py  _harness.py  _metrics.py  _models_mariadb.py  _models_sqlite.py  _workloads.py  construction.py  run.py
docs/: adoption.md  engine-settings.md  error-handling.md  migrations.md  schema-drift.md  testing-mariadb.md  typing.md  why-not-orm.md
docs/adr/: 0001-hand-authored-raw-sql-migrations.md  0002-advisory-locked-concurrent-migrations.md  0003-per-backend-namespace-column-declarations.md  0004-dialect-blind-core-with-open-ast-dialect-expressions.md  0005-storage-primitive-constructors-with-derived-codecs.md  0006-columns-are-not-immutable.md  0007-imperative-migrations-connect-only-initialization.md  0007-server-defaults-as-default-markers.md  0008-separate-partial-schema-verification.md  0009-canonical-utc-datetime-text-form.md  0009-instant-curated-logical-type.md  0009-utcdatetime-curated-logical-type.md
examples/: __init__.py  basic_app.py  typed_queries.py
join_prototypes/: proto_c_full.py  proto_d_bare_target.py  proto_d_relations.py  proto_e_projection_join.py  proto_f_scope_checked_projection.py  proto_g_deferred_subset.py  proto_h_columns_first_checked.py
snekql/: __init__.py  __init__.pyi  __main__.py  _common.py  _dialect_expr.py  _migrations.py  _model_materialization.py  _pool.py  _query_compile.py  _query_dialect.py  _query_materialize.py  _query_state.py  _runtime_selection.py  _scaffold.py  _schema_compile.py  _schema_dialect.py  _schema_plan.py  _schema_shape.py  _schema_startup.py  _settings.py  agent_docs.py  cli.py  errors.py  expressions.py  indexes.py  lexer.py  main.py  model.py  parser.py  query.py  runtime.py  schema.py  storage.py  structured_logging.py  tstring_compat.py  validation.py
snekql/examples/: __init__.py  basic.py  typed_queries.py
snekql/mariadb/: __init__.py  _dialect_sql.py  config.py  identifiers.py  migrations.py  model.py  query.py  runtime.py  schema.py  settings.py  storage.py  verbs.py
snekql/sqlite/: __init__.py  _dialect_sql.py  _schema_ddl.py  config.py  identifiers.py  migrations.py  pool.py  query.py  retry.py  runtime.py  schema.py  settings.py  verbs.py
snekql/testing/: __init__.py
snekql/testing/mariadb/: __init__.py  _commands.py  _types.py  cli.py  server.py
tests/: __init__.py  helpers.py  logging_helpers.py  mariadb_server.py  test_architecture_modules.py  test_backend_identity.py  test_benchmark_fixtures.py  test_boundary_validation.py  test_database_initialization.py  test_database_runtime.py  test_delete_execution.py  test_dialect_blind_core.py  test_docs_cli.py  test_identifier_quoting_properties.py  test_identifier_validation_properties.py  test_insert_execution.py  test_mariadb_namespace.py  test_mariadb_query_compilation.py  test_mariadb_runtime.py  test_mariadb_schema.py  test_mariadb_server_fixture.py  test_mariadb_storage_codecs.py  test_migrations.py  test_model_declaration.py  test_model_materialization.py  test_optional_dependencies.py  test_predicate_and_mutation_execution.py  test_public_api.py  test_public_typing.py  test_query_compilation_properties.py  test_runtime_selection.py  test_scaffold.py  test_schema_compile.py  test_schema_compile_properties.py  test_schema_plan.py  test_schema_shape.py  test_schema_startup.py  test_select_execution.py  test_settings.py  test_storage_codecs.py  (+5 more)
tests/fixtures/: model_without_future_annotations.py
tests/integration/lexer/: test_lexer.py
tests/mariadb/: test_bulk_insert_runtime.py  test_connection_settings.py  test_json_operators.py  test_migration_locking.py  test_migrations.py  test_model_materialization.py  test_pool_fairness.py  test_query_compilation.py  test_runtime.py  test_schema.py  test_settings.py  test_storage_codecs.py  test_storage_codecs_properties.py
tests/packaging/: test_optional_dependencies.py
tests/query/: test_aggregates.py  test_boundary_validation.py  test_bulk_insert_compilation.py  test_column_reference.py  test_comparison_predicates.py  test_delete_execution.py  test_distinct.py  test_foreign_key.py  test_group_by.py  test_having.py  test_injection_resistance.py  test_insert_execution.py  test_join_compilation.py  test_join_validation.py  test_predicate_and_mutation_execution.py  test_row_materialization.py  test_select_execution.py  test_sql_repr.py  test_stream_execution.py  test_subqueries.py  test_update_execution.py
tests/runtime/: test_async_lifecycle.py  test_backend_identity.py  test_database_initialization.py  test_database_runtime.py
tests/sqlite/: test_bulk_insert_runtime.py  test_busy_retry.py  test_connection_settings.py  test_join_runtime.py  test_migrations.py  test_model_materialization.py  test_pool_fairness.py  test_runtime.py  test_schema.py  test_storage_codecs.py  test_storage_codecs_properties.py  test_structured_logging.py  test_transaction_misuse.py  test_utc_datetime_runtime.py  test_write_contention.py
tests/testing/mariadb/: test_server_fixture.py
tests/unit/lexer/: test_source.py
